Added Shoes.html page with cards w/ icons for excercise and comfort shoes

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,11 @@
   color: #000000;
 }
 
+.material-icons-shoes {
+  font-size: 75px;
+  color: #000000;
+}
+
 .custom-btn {
   color: #495057;
   border-color: #ced4da;
